--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -2,6 +2,7 @@
 import BaseHead from '../../components/BaseHead.astro';
 import Footer from '../../components/Footer.astro';
 import Header from '../../components/Header.astro';
+import ScrollToTop from '../../components/ScrollToTop.astro';
 import { getPosts, getPost } from '../../lib/wordpress';
 import '../../styles/global.css';
 
@@ -85,5 +86,6 @@ const readingTime = Math.ceil(wordCount / 200);
 			</a>
 		</main>
 		<Footer />
+		<ScrollToTop />
 	</body>
 </html>
