--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import BaseHead from '../components/BaseHead.astro';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
+import ScrollToTop from '../components/ScrollToTop.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
 import { getPosts } from '../lib/wordpress';
 import '../styles/global.css';
@@ -89,5 +90,6 @@ const posts = await getPosts();
 			</div>
 		</main>
 		<Footer />
+		<ScrollToTop />
 	</body>
 </html>
