--- a/src/components/ScrollToTop.astro
+++ b/src/components/ScrollToTop.astro
@@ -17,7 +17,7 @@
 		height: 48px;
 		border-radius: 50%;
 		background-color: rgb(var(--accent));
-		color: white;
+		color: #374151;
 		border: none;
 		cursor: pointer;
 		display: flex;
