--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -35,6 +35,15 @@ const menuItems = await getMenu();
 		</button>
 
 		<div class="social-links">
+			<a href="/kontaktai" title="Kontaktai">
+				<span class="sr-only">El. paštas</span>
+				<svg viewBox="0 0 24 24" aria-hidden="true" width="32" height="32"
+					><path
+						fill="currentColor"
+						d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
+					></path></svg
+				>
+			</a>
 			<a href="https://www.facebook.com/groups/372993659852080" target="_blank">
 				<span class="sr-only">Facebook grupė</span>
 				<svg viewBox="0 0 24 24" aria-hidden="true" width="32" height="32"
