--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -76,9 +76,46 @@
 	padding-left: 1.625em;
 }
 
+.prose ul {
+	list-style-type: disc;
+}
+
+.prose ol {
+	list-style-type: decimal;
+}
+
 .prose li {
 	margin-top: 0.5em;
 	margin-bottom: 0.5em;
+	line-height: 1.75;
+	font-size: 1.125rem;
+}
+
+.prose ul ul, .prose ol ol, .prose ul ol, .prose ol ul {
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
+}
+
+/* WordPress block styles */
+.wp-block-list {
+	margin-top: 1.25em;
+	margin-bottom: 1.25em;
+	padding-left: 1.625em;
+}
+
+ol.wp-block-list {
+	list-style-type: decimal;
+}
+
+ul.wp-block-list {
+	list-style-type: disc;
+}
+
+.wp-block-list li {
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
+	line-height: 1.75;
+	font-size: 1.125rem;
 }
 
 .prose blockquote {
