--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const today = new Date();
 <footer>
 	&copy; {today.getFullYear()} Eks Emigrantai. All rights reserved.
 	<div class="social-links">
-		<a href="https://www.facebook.com/groups/372993659852080" target="_blank">
+		<a href="https://www.facebook.com/groups/372993659852080" target="_blank" rel="noopener noreferrer">
 			<span class="sr-only">Facebook grupė</span>
 			<svg viewBox="0 0 24 24" aria-hidden="true" width="32" height="32"
 				><path
@@ -19,8 +19,8 @@ const today = new Date();
 <style>
 	footer {
 		padding: 2em 1em 6em 1em;
-		background: linear-gradient(var(--gray-gradient)) no-repeat;
-		color: rgb(var(--gray));
+		background: #f5f5f4;
+		color: #6b7280;
 		text-align: center;
 	}
 	.social-links {
@@ -31,9 +31,9 @@ const today = new Date();
 	}
 	.social-links a {
 		text-decoration: none;
-		color: rgb(var(--gray));
+		color: #6b7280;
 	}
 	.social-links a:hover {
-		color: rgb(var(--gray-dark));
+		color: #374151;
 	}
 </style>
