--- a/src/pages/kontaktai.astro
+++ b/src/pages/kontaktai.astro
@@ -178,7 +178,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			
 			<div class="contact-info">
 				<h2>Kiti būdai susisiekti</h2>
-				<p>👥 Facebook grupė: <a href="https://www.facebook.com/groups/372993659852080" target="_blank">Exemigrantai</a></p>
+				<p>👥 Facebook grupė: <a href="https://www.facebook.com/groups/372993659852080" target="_blank" rel="noopener noreferrer">Exemigrantai</a></p>
 			</div>
 		</main>
 		<Footer />
